fix: Exercices text and tooltip overflow
[SWBIT-2029] 
* Ellipsis applied onto the text
* Tooltips adapted for the infotab_item block

--- a/app/styles/components/_tooltips.scss
+++ b/app/styles/components/_tooltips.scss
@@ -156,6 +156,19 @@
             }
         }
     }
+    &[data-tooltip-position="infotab_item"] {
+        &:before {
+            top: calc(100% - 5px);
+            transform: translateX(-5px);
+            height: auto!important;
+        }
+        &:hover {
+            &:after {
+                top: calc(100% - 35px);
+                transform: translateX(105px) rotate(180deg);
+            }
+        }
+    }
     &[data-tooltip-position="right"] {
         &:before {
             left: calc(100% + 20px);
